Implemented Game persistence in the achievement context; Minor code fixes